attempting to fix triphikers button mobile css

--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -278,7 +278,7 @@
     }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 400px) {
     .tripHikersContainer {
         display: flex;
         flex-direction: column;
